@@ -3,6 +3,10 @@ Pidgin and Finch: The Pimpin' Penguin IM Clients That're Good for the Soul
 version 2.7.4 (MM/DD/YYYY):
 	General:
 	* Fix search path for Tk when compiling on Debian Squeeze. (#12465)
+	
+	libpurple:
+	* Added ability to use TURN relaying via TCP and TLS (including preference
+	  settings for these).
 
 version 2.7.3 (08/10/2010):
 	General:
